Update dependencies and fix some error prone warnings (#1654)
* Update dependencies and fix some error prone warnings
* Added release notes